--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             contact at rrrecords.space
           </h2>
 
-          <h3>player ⇢ instrument ⇢ microphone ⇢ console ⇢ converter ⇢ computer ⇢ <strong>RRRECORDS</strong> ⇢ mixing ⇢ mastering ⇢ billboard hot 100 album</h3>
+          <h3>
+            player ⇢ instrument ⇢ microphone ⇢ preamp ⇢ converter ⇢ computer ⇢ <span style="font-weight:bold;padding-bottom:2px;border-bottom:1px solid #aaa">RRRECORDS</span> ⇢ mixing ⇢ mastering ⇢
+            billboard hot 100 album
+          </h3>
         </div>
       </div>
     </section>
