--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <nav class="navbar is-transparent">
       <div class="navbar-end">
         <div class="navbar-start is-size-7">
-          <a class="navbar-item" href="https://rrrecords.space">instagram</a><a class="navbar-item" href="https://rrrecords.space">facebook</a
+          <a class="navbar-item" href="https://www.instagram.com/radioraviolirecords">instagram</a>
+          <a class="navbar-item" href="https://fb.me/joris.saidani">facebook</a
           ><a class="navbar-item" href="https://rrrecords.space">twitter</a>
         </div>
       </div>
